* proc.c (rb_binding_new_with_cfp): create binding object even if   the frame is IFUNC. But return a ruby-level binding to keep   compatibility.   This patch fix degradation introduced from r39067.   [Bug #7774] [ruby-dev:46960] * test/ruby/test_settracefunc.rb: add a test.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@39275 b2dd03c8-39d4-4d8f-98ff-823fe69b080e